Tambah halaman login

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
-RewriteEngine on
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* index.php/$0 [PT,L]
+RewriteRule ^(.*)$ index.php/$1 [L]
 
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
@@ -31,7 +31,3 @@ ExpiresDefault "access 1 month"
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
 
-#http to https
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
