--- a/application/.htaccess
+++ b/application/.htaccess
@@ -1,3 +1,8 @@
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ index.php/$1 [L]
+
 <IfModule authz_core_module>
     Require all denied
 </IfModule>
@@ -8,7 +13,3 @@
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
 #http to https
-
-RewriteEngine On
-RewriteCond %{HTTPS} off
-RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
