--- a/.htaccess
+++ b/.htaccess
@@ -10,7 +10,7 @@ ExpiresByType image/jpg "access 1 year"
 ExpiresByType image/jpeg "access 1 year"
 ExpiresByType image/gif "access 1 year"
 ExpiresByType image/png "access 1 year"
-ExpiresByType text/css "access 1 month"
+ExpiresByType text/css "access 1 day"
 ExpiresByType text/html "access 1 month"
 ExpiresByType application/pdf "access 1 month"
 ExpiresByType text/x-javascript "access 1 month"
@@ -29,6 +29,21 @@ ExpiresDefault "access 1 month"
 
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
+    <FilesMatch "\.(js|css|xml|gz|html|htm)$">
+    Header append Vary: Accept-Encoding
+    SetOutputFilter DEFLATE
+  </FilesMatch>
 </IfModule>
+
+<ifModule mod_gzip.c>
+ mod_gzip_on Yes
+ mod_gzip_dechunk Yes
+ mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+ mod_gzip_item_include handler ^cgi-script$
+ mod_gzip_item_include mime ^text/.*
+ mod_gzip_item_include mime ^application/x-javascript.*
+ mod_gzip_item_exclude mime ^image/.*
+ mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+ </ifModule>
 
 
