--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,10 @@
 RewriteEngine On
+
+# Pengalihan HTTP ke HTTPS
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+# Aturan URL rewriting untuk CodeIgniter
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
@@ -44,6 +50,4 @@ ExpiresDefault "access 1 month"
  mod_gzip_item_include mime ^application/x-javascript.*
  mod_gzip_item_exclude mime ^image/.*
  mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
- </ifModule>
-
-
+</ifModule>
