--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,31 @@
+# Pengalihan dari www ke non-www (dpmptsp.agamkab.go.id)
 RewriteEngine On
+# Jika URL mengandung www, alihkan ke non-www
+RewriteCond %{HTTP_HOST} ^www\.dpmptsp\.agamkab\.go\.id [NC]
+RewriteRule ^(.*)$ https://dpmptsp.agamkab.go.id/$1 [L,R=301]
+
+# Pastikan file atau direktori yang diminta benar-benar tidak ada sebelum meneruskan ke index.php
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 
 ## EXPIRES CACHING ##
 <IfModule mod_expires.c>
-ExpiresActive On
-ExpiresByType image/jpg "access 1 year"
-ExpiresByType image/jpeg "access 1 year"
-ExpiresByType image/gif "access 1 year"
-ExpiresByType image/png "access 1 year"
-ExpiresByType text/css "access 1 day"
-ExpiresByType text/html "access 1 month"
-ExpiresByType application/pdf "access 1 month"
-ExpiresByType text/x-javascript "access 1 month"
-ExpiresByType application/x-shockwave-flash "access 1 month"
-ExpiresByType image/x-icon "access 1 year"
-ExpiresDefault "access 1 month"
+  ExpiresActive On
+  ExpiresByType image/jpg "access 1 year"
+  ExpiresByType image/jpeg "access 1 year"
+  ExpiresByType image/gif "access 1 year"
+  ExpiresByType image/png "access 1 year"
+  ExpiresByType image/webp "access 1 year"  # Tambahan untuk WebP
+  ExpiresByType text/css "access 1 day"
+  ExpiresByType text/html "access 1 month"
+  ExpiresByType application/pdf "access 1 month"
+  ExpiresByType text/x-javascript "access 1 month"
+  ExpiresByType application/x-shockwave-flash "access 1 month"
+  ExpiresByType image/x-icon "access 1 year"
+  ExpiresDefault "access 1 month"
 </IfModule>
-## EXPIRES CACHING
+## EXPIRES CACHING ##
 
 # php -- BEGIN cPanel-generated handler, do not edit
 # Set the “ea-php56” package as the default “PHP” programming language.
@@ -27,23 +34,23 @@ ExpiresDefault "access 1 month"
 </IfModule>
 # php -- END cPanel-generated handler, do not edit
 
+# Enable cross-origin resource sharing (CORS) and compression
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
     <FilesMatch "\.(js|css|xml|gz|html|htm)$">
-    Header append Vary: Accept-Encoding
-    SetOutputFilter DEFLATE
-  </FilesMatch>
+        Header append Vary: Accept-Encoding
+        SetOutputFilter DEFLATE
+    </FilesMatch>
 </IfModule>
 
-<ifModule mod_gzip.c>
- mod_gzip_on Yes
- mod_gzip_dechunk Yes
- mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
- mod_gzip_item_include handler ^cgi-script$
- mod_gzip_item_include mime ^text/.*
- mod_gzip_item_include mime ^application/x-javascript.*
- mod_gzip_item_exclude mime ^image/.*
- mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
- </ifModule>
-
-
+# Kompresi menggunakan mod_gzip (pastikan server mendukung mod_gzip)
+<IfModule mod_gzip.c>
+  mod_gzip_on Yes
+  mod_gzip_dechunk Yes
+  mod_gzip_item_include file .(html?|txt|css|js|php|pl)$
+  mod_gzip_item_include handler ^cgi-script$
+  mod_gzip_item_include mime ^text/.*
+  mod_gzip_item_include mime ^application/x-javascript.*
+  mod_gzip_item_exclude mime ^image/.*
+  mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+</IfModule>
